footer-bg-color-change

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,8 @@
     max-width: 100%;
     max-height: 422px;
     /* margin: 3rem; */
-    background: rgba(0, 66, 37, 0.09);
+    /* background: rgba(0, 66, 37, 0.09); */
+    background-color: brown;
 }
 
 /* box-1 */
